fix bug in datepicker that date was cut off if window was too small

--- a/client/app/assets/app.css
+++ b/client/app/assets/app.css
@@ -595,3 +595,13 @@ md-toast.announcement > .md-toast-content a {
     margin-top: 10px;
     line-height: 22px;
 }
+
+/* Export Account Dialog */
+
+/*
+  Fixes a bug in datepicker which cut off the date in the top left, when window is too small
+  see: https://github.com/ArkEcosystem/ark-desktop/pull/485#issuecomment-354466571
+*/
+.md-datepicker-calendar-pane .md-datepicker-input-mask > div.md-datepicker-input-mask-opaque {
+  left: 5px !important;
+}
